src/pageLayouts/frc/Home/home.import.less
body,
html {
  overflow-x: hidden;
  padding: 0;
  margin: 0;
}

.home {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  .home__banner {
    background-image: url('../../../assets/images/frc/home-hero-lg.jpg');
    background-position: top center;
    background-size: cover;
    background-repeat: no-repeat;
    width: 100vw;
    height: 80vh;
    overflow: hidden;
    display: flex;
    flex: 1;
    justify-content: center;
    text-align: center;
    .home__banner-text-container {
      max-width: 800px;
      .home__banner-title {
        color: @white;
        font-family: @raleway;
        font-weight: 600;
        font-size: 50px;
        letter-spacing: 3px;
        margin-bottom: 0.67em;
        text-transform: uppercase;
      }
      .home__banner-subtitle {
        color: @off-white;
        font-family: 'Raleway', sans-serif;
        font-size: 25px;
        font-weight: 200;
        line-height: 32px;
        margin-top: -20px;
        margin-bottom: 20px;
      }
      .home__banner-description {
        color: @white;
        font-family: @raleway;
        font-size: 18px;
        letter-spacing: 0.8px;
        line-height: 200%;
        margin-bottom: 20px;
      }
    }
  }
  .home__events {
    background-color: #eee;
    text-align: center;
    padding-top: 10vh;
    padding-bottom: 10vh;
    .home__events-header {
      color: @text-dark;
      font-size: 38px;
      font-weight: 600;
      margin-bottom: -10px;
      font-family: @raleway;
      letter-spacing: 0.0625em;
      text-transform: uppercase;
      padding: 5px;
    }
    .home__events-container {
      text-align: center;
      padding-right: 5vw;
      padding-left: 5vw;
      display: flex;
      flex: 1;
      @media screen and (max-width: 768px) {
        display: block;
      }
    }
  }
}

